--- a/public_html/design.css
+++ b/public_html/design.css
@@ -2,11 +2,11 @@
 /*
 
 
-Student Info: Name=SupriyaDeore, ID=19299
+
 
 Subject: CS557C_HW1_SUMMER_2015
 
-Author: SUPRIYA DEORE
+Author: deore123
 
 Filename: design.css
 
@@ -15,10 +15,7 @@ Date and Time: Oct 19, 2016 2:14:14 PM
 Project Name: MyFirstWebSite
 
 
-*//* 
-    Created on : Oct 19, 2016, 2:14:14 PM
-    Author     : Supriya
-*/
+
 
 #wrapper {
    width : 1420px;
