--- a/public_html/style.css
+++ b/public_html/style.css
@@ -2,11 +2,10 @@
 /*
 
 
-Student Info: Name=SupriyaDeore, ID=19299
 
 Subject: CS557C_HW1_SUMMER_2015
 
-Author: SUPRIYA DEORE
+Author: deore123
 
 Filename: style.css
 
@@ -15,12 +14,7 @@ Date and Time: Nov 12, 2016 8:01:37 PM
 Project Name: MyFirstWebSite
 
 
-*/
 
-/* 
-    Created on : Nov 12, 2016, 8:01:37 PM
-    Author     : Supriya
-*/
 
 /* Dcrazed style */
 .headline{text-align:center;margin:20px 0 75px}
